--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "nesbot/carbon": "1.25.0",
         "tymon/jwt-auth": "0.5.*"
     },
     "require-dev": {
