--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
         "barryvdh/laravel-cors": "^0.11.0",
         "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
+        "jenssegers/mongodb": "3.4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "mongodb/mongodb": "^1.5",
         "nesbot/carbon": "1.25.0",
         "tymon/jwt-auth": "0.5.*"
     },
