--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "alfa6661/laravel-mongodb-cache": "^2.0",
         "barryvdh/laravel-cors": "^0.11.0",
         "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
